# thorn

./: Cargo.toml  README.md  package-lock.json
data/has_error/: sourcemap.json
service/: .gitignore  README.md
service/data/big/: fake.br  trace.json
service/data/binop/: binop.br  trace.json
service/data/fix/: main.br  sourcemap.json  trace.json
service/data/good/: sourcemap.json  trace.json
service/data/has_error/: trace.json
service/data/test/: trace.json
service/data/tmp/: README.md  pointer.br  sourcemap.json  trace.json  while_in_if.br
service/docs/: graph.md
service/src/: graph.rs  main.rs  sourcemap.rs  trace.rs
service/src/cli/: mod.rs
service/src/service/: mod.rs
src/: cors.rs  graph.rs  trace.rs
src/service/: mod.rs
thorns/: .gitignore  Cargo.toml  README.md
thorns/data/big/: sourcemap.json
thorns/data/binop/: sourcemap.json
thorns/data/diff/left/: second.br  sourcemap.json
thorns/data/diff/right/: sourcemap.json  trace.json
thorns/data/diff2/left/: main.br  sourcemap.json  trace.json
thorns/data/diff2/right/: second.br  sourcemap.json  trace.json
thorns/data/fix/: trace.json
thorns/src/: graph.rs  lib.rs  main.rs  sourcemap.rs  trace.rs
thorns/src/cli/: mod.rs
thorns/src/service/: mod.rs
viewer/: DESIGN.md  README.md  package-lock.json  package.json
viewer/public/: index.html  manifest.json
viewer/src/: App.js  CodeDisplay.js  Graph.js  SplitPane.js  TraceDisplay.js  index.css
