[package]
name = "braid-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
serde = "*"
serde_json = "*"
clap = { version = "3.0.7", features = ["derive"] }